hphp/hack/test/typecheck/map_set_mixed.php.exp
ERROR: File "map_set_mixed.php", line 5, characters 11-12:
Invalid argument (Typing[4110])
  File "map_set_mixed.php", line 4, characters 8-13:
  Expected `arraykey`
  File "map_set_mixed.php", line 3, characters 12-16:
  But got `mixed`
