hphp/hack/test/typecheck/map_set_mixed.php
<?hh

function f(mixed $x) : void {
  $m = Map {};
  $m->set($x, $x);
}
